# internal/tinyvalapi/blob_handlers.go
@@ -3,9 +3,9 @@ package tinyvalapi
 import "net/http"
 
 func getBlobHandler(w http.ResponseWriter, r *http.Request) {
-	http.NotFound(w, r)
+	http.Error(w, "not implemented", http.StatusNotImplemented)
 }
 
 func putBlobHandler(w http.ResponseWriter, r *http.Request) {
-	http.NotFound(w, r)
+	http.Error(w, "not implemented", http.StatusNotImplemented)
 }
